# iai_kinect2

depth_registration/: CMakeLists.txt
depth_registration/src/: depth_registration.cpp
kinect2_bridge/: CMakeLists.txt
kinect2_bridge/include/: kinect2_definitions.h
kinect2_bridge/launch/: kinect2_bridge.launch  kinect2_bridge_ir.launch
kinect2_bridge/lib/: libusb-1.0.so.0
kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_calibration/src/: kinect2_calibration.cpp
